plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
    id 'com.palantir.git-version' version '3.1.0'
}

group = project.maven_group
version = "0.0.1-SNAPSHOT"

base {
    archivesName = project.archives_base_name
}

loom {
    accessWidenerPath = file("src/main/resources/meh.classtweaker")
    mods {
        "meh" {
            sourceSet sourceSets.main
        }
    }
}

fabricApi {
    configureDataGeneration() {
        client = true
    }
}

repositories {
    maven { url "https://maven.shedaniel.me/" } // Cloth Config API
    maven { url "https://maven.terraformersmc.com/releases/" } // Mod Menu
    maven { url "https://repo.hypixel.net/repository/Hypixel/" } // Hypixel Mod API
    maven { url "https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1" } // DevAuth
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    api ("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_version}") { // Cloth Version found at https://linkie.shedaniel.dev/dependencies
        exclude(group: "net.fabricmc.fabric-api")
    }
    api "com.terraformersmc:modmenu:${project.mod_menu_version}"
    api "net.hypixel:mod-api:${project.hypixel_mod_api_version}"

    // runtimeOnly "me.djtheredstoner:DevAuth-fabric:${project.dev_auth_version}" // TODO: Not updated
}

processResources {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE

    outputs.upToDateWhen { false } // Always process resource properties

    def details = versionDetails()
    def archiveVersion = "${details.gitHash}-${details.branchName}"
    inputs.property "version", archiveVersion

    filesMatching("fabric.mod.json") {
        expand "version": archiveVersion
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName.get()}"}
    }
}
